# COM-xll-ExcelAddin

./: Cargo.toml  README.md  excelRibbon.xml
src/: appreg.rs  automation.rs  com.rs  data.rs  dispatch.rs  lib.rs  menu.rs  range.rs  registry.rs  regkeys.rs  ribbon.rs  rot.rs  typelib.rs  variant.rs  workbook.rs  worksheet.rs  xlcall.rs  xlexcel4.rs  xllregister.rs  xlvariant.rs
