[package]
name = "xlladdin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Foundation",
]

[lib]
crate-type = ["dylib"]