[package]
name = "xlladdin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_UI_Ribbon",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",    
]